--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -27,13 +27,13 @@
     main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
 
-    /* POPRAWKA: FLEX zamiast GRID dla lepszej obsługi mobilnej */
+    /* Działa na komputerze i telefonie */
     .search-grid { display:flex; flex-wrap:wrap; gap:20px; }
-    .search-grid > div { flex:1 1 220px; min-width:220px; }
+    .search-grid > div { flex:1 1 100%; } /* na telefonie pełna szerokość */
 
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
     select, button { padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; width:100%; }
-    button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; margin-top:22px; }
+    button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
 
     .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
@@ -43,7 +43,11 @@
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
 
-    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
+    @media(max-width:600px) { 
+      .header-container { flex-direction:column; align-items:flex-start; }
+      .search-grid { display:block; } /* Wersja mobilna blok */
+      .search-grid > div { margin-bottom:12px; }
+    }
   </style>
 </head>
 <body>
@@ -186,7 +190,6 @@ document.getElementById('szukaj').addEventListener('click', async () => {
   empty.style.display = 'none'
 })
 
-// inicjalizacja
 loadWojewodztwa()
 </script>
 </body>
