--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -20,19 +20,17 @@
     body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
     header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
     .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-      .logo { width: 55px; display: block; }
-      .header-text h1 { margin:0; font-size:28px; }
-      .header-text p { margin:6px 0 0; opacity:0.9; }
+    .logo { width: 55px; display: block; }
+    .header-text h1 { margin:0; font-size:28px; }
+    .header-text p { margin:6px 0 0; opacity:0.9; }
 
     main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
-
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
     .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
     select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
     button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
-
     .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
     table { width:100%; border-collapse:collapse; }
     th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
@@ -42,8 +40,14 @@
 
     @media(max-width:600px) {
       .header-container { flex-direction:column; align-items:flex-start; }
-      .search-grid { display:block; }
-      .search-grid > div { margin-bottom:15px; width:100%; }
+      /* Poprawka dla mobilnych: flex zamiast grid dla lepszej obsługi select */
+      .search-grid {
+        display: flex !important;
+        flex-direction: column !important;
+        gap: 15px !important;
+      }
+      .search-grid > div { width: 100%; }
+      button { align-self: flex-start; }
     }
   </style>
 </head>
@@ -75,7 +79,7 @@
         </select>
       </div>
       <div>
-        <button id="szukaj">Szukaj</button>
+        <button onclick="szukaj()">Szukaj</button>
       </div>
     </div>
   </div>
@@ -100,8 +104,8 @@
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-const SUPABASE_URL = "https://TWOJ_PROJECT.supabase.co"
-const SUPABASE_ANON_KEY = "TWOJ_PUBLIC_ANON_KEY"
+const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co"
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
 const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
 const wojSelect = document.getElementById('wojewodztwo')
@@ -121,7 +125,7 @@ async function loadWojewodztwa() {
   })
 }
 
-// Wczytaj miasta po wyborze województwa
+// Wczytaj miasta po województwie
 wojSelect.addEventListener('change', async () => {
   const wojId = wojSelect.value
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
@@ -143,8 +147,7 @@ wojSelect.addEventListener('change', async () => {
   miastoSelect.disabled = false
 })
 
-// Szukaj po kliknięciu
-document.getElementById('szukaj').addEventListener('click', async () => {
+async function szukaj() {
   const wojId = wojSelect.value
   const miastoId = miastoSelect.value
   tbody.innerHTML = ''
@@ -159,7 +162,6 @@ document.getElementById('szukaj').addEventListener('click', async () => {
     .select('imie,nazwisko,email,telefon,gwiazdki')
     .eq('wojewodztwo_id', wojId)
     .eq('miasto_id', miastoId)
-    .eq('status', 'zweryfikowane')
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
@@ -186,10 +188,12 @@ document.getElementById('szukaj').addEventListener('click', async () => {
   })
 
   empty.style.display = 'none'
-})
+}
 
 // inicjalizacja
 loadWojewodztwa()
+window.szukaj = szukaj
+
 </script>
 </body>
 </html>
