--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,55 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ogólnopolski Rejestr Elektryków</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ogólnopolski Rejestr Elektryków</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <style>
-    :root {
-      --primary: #0B5FA5;
-      --bg: #f4f6f8;
-      --card: #ffffff;
-      --text: #1c1c1e;
-      --muted: #6b7280;
-    }
+<style>
+:root {
+  --primary: #0B5FA5;
+  --bg: #f4f6f8;
+  --card: #ffffff;
+  --text: #1c1c1e;
+  --muted: #6b7280;
+}
 
-    * { box-sizing: border-box; }
-    body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
-    header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
-    .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-    .logo { width: 55px; display: block; }
-    .header-text h1 { margin:0; font-size:28px; }
-    .header-text p { margin:6px 0 0; opacity:0.9; }
+* { box-sizing: border-box; }
+body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
+header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
+.header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
+.logo { width: 55px; display: block; }
+.header-text h1 { margin:0; font-size:28px; }
+.header-text p { margin:6px 0 0; opacity:0.9; }
 
-    main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
-    .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
-    .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
-    label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
-    select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
-    button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
-    button:hover { opacity:0.9; }
-    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
-    table { width:100%; border-collapse:collapse; }
-    th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
-    th { font-size:14px; color:var(--muted); }
-    .stars { color:#f5b301; font-size:16px; }
-    .empty { text-align:center; padding:30px; color:var(--muted); }
-
-    @media(max-width:600px) {
-      .header-container { flex-direction:column; align-items:flex-start; }
-      /* Poprawka dla mobilnych: flex zamiast grid dla lepszej obsługi select */
-      .search-grid {
-        display: flex !important;
-        flex-direction: column !important;
-        gap: 15px !important;
-      }
-      .search-grid > div { width: 100%; }
-      button { align-self: flex-start; }
-    }
-  </style>
+main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
+.search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
+.search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
+label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
+select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
+button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
+button:hover { opacity:0.9; }
+.results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
+table { width:100%; border-collapse:collapse; }
+th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
+th { font-size:14px; color:var(--muted); }
+.stars { color:#f5b301; font-size:16px; }
+.empty { text-align:center; padding:30px; color:var(--muted); }
+@media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
+</style>
 </head>
 <body>
 
@@ -78,7 +67,7 @@
           <option value="">-- wybierz --</option>
         </select>
       </div>
-      <div>
+      <div style="align-self:end;">
         <button onclick="szukaj()">Szukaj</button>
       </div>
     </div>
@@ -115,11 +104,11 @@ const empty = document.getElementById('empty')
 
 // Wczytaj województwa
 async function loadWojewodztwa() {
-  const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
+  const { data, error } = await supabase.from('wojewodztwa').select('nazwa').order('nazwa')
   if (error) { console.error(error); return }
   data.forEach(w => {
     const option = document.createElement('option')
-    option.value = w.id
+    option.value = w.nazwa  // używamy nazwy
     option.textContent = w.nazwa
     wojSelect.appendChild(option)
   })
@@ -127,32 +116,39 @@ async function loadWojewodztwa() {
 
 // Wczytaj miasta po województwie
 wojSelect.addEventListener('change', async () => {
-  const wojId = wojSelect.value
+  const woj = wojSelect.value
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
   miastoSelect.disabled = true
-  if (!wojId) return
+  if (!woj) return
 
   const { data, error } = await supabase.from('miasta')
-    .select('id,nazwa')
-    .eq('wojewodztwo_id', wojId)
+    .select('nazwa')
+    .eq('wojewodztwo_id', await getWojewodztwoId(woj))
     .order('nazwa')
-  if (error) { console.error(error); return }
 
+  if (error) { console.error(error); return }
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = m.id
+    option.value = m.nazwa
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
   miastoSelect.disabled = false
 })
 
+// Funkcja pomocnicza do pobrania ID województwa po nazwie
+async function getWojewodztwoId(nazwa) {
+  const { data } = await supabase.from('wojewodztwa').select('id').eq('nazwa', nazwa).single()
+  return data?.id
+}
+
+// Szukaj elektryków
 async function szukaj() {
-  const wojId = wojSelect.value
-  const miastoId = miastoSelect.value
+  const woj = wojSelect.value
+  const miasto = miastoSelect.value
   tbody.innerHTML = ''
 
-  if (!wojId || !miastoId) {
+  if (!woj || !miasto) {
     empty.textContent = 'Proszę wybrać województwo i miasto'
     empty.style.display = 'block'
     return
@@ -160,8 +156,8 @@ async function szukaj() {
 
   const { data, error } = await supabase.from('tabela_elektrykow')
     .select('imie,nazwisko,email,telefon,gwiazdki')
-    .eq('wojewodztwo_id', wojId)
-    .eq('miasto_id', miastoId)
+    .eq('wojewodztwo', woj)
+    .eq('miasto', miasto)
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
